--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
    <meta charset="UTF-8">
@@ -7,7 +7,8 @@
    <title>
       Concept Arquitetura e Engenharia- Página Inicial
    </title>
-   <meta name="description" content="">
+   <meta name="description" content="Empresa especializada em engenharia e arquitetura, oferecendo soluções completas em construção civil e obras públicas no Marajó.">
+
    <link rel="stylesheet" href="styles.css">
    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -61,7 +62,7 @@
 
          </div>
          <div class="hero-image">
-            <img src="assets/images/construcao.jpg" alt="Construção Civil">
+            <img src="assets/images/construcao.jpg" alt="Equipe trabalhando em obra de construção civil">
          </div>
       </section>
 
@@ -82,7 +83,7 @@
 
          <!-- Card principal -->
          <div class="card-principal">
-            <img src="assets/images/construcao.jpg" alt="Construção civil">
+            <img src="assets/images/construcao.jpg" alt="Equipe trabalhando em obra de construção civil">
             <div class="texto-principal">
                <h4>Sobre nós</h4>
                <h2>Compromisso em cada obra, qualidade em cada entrega</h2>
@@ -98,7 +99,7 @@
          <!-- Cards menores -->
          <div class="cards">
             <div class="card">
-               <img src="assets/images/construcao.jpg" alt="Homes trabalhando">
+               <img src="assets/images/construcao.jpg" alt="Equipe trabalhando em obra de construção civil">
                <div class="card-texto">
                   <h3>Construção de até 3 pavimentos</h3>
                   <p>
@@ -110,7 +111,7 @@
             </div>
 
             <div class="card">
-               <img src="assets/images/construcao.jpg" alt="Homes trabalhando">
+               <img src="assets/images/construcao.jpg" alt="Equipe trabalhando em obra de construção civil">
                <div class="card-texto">
                   <h3>Reformas Interna e externas</h3>
                   <p>
@@ -122,7 +123,7 @@
             </div>
 
             <div class="card">
-               <img src="assets/images/construcao.jpg" alt="Homes trabalhando">
+               <img src="assets/images/construcao.jpg" alt="Equipe trabalhando em obra de construção civil">
                <div class="card-texto">
                   <h3>Do projeto até a entrega da obra completa</h3>
                   <p>
